feature: CXRM-1613 open api added
